# weather-station

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs  flake.nix
c/: BME280-help.c  BME280-help.h  BME280-main.c  add.h  blink.c  ctime.c  ctime.h  dht.c  dht11.c  dht11.h  main  pi.h  py.c  py.h  read.c  test.h  test_time.c  wind_speed.c  wind_speed.h  wiringPi.h
python/: BME-clean.py  BME280.py  BMEtest.py  Wind_Speed.py  main.py  new.py  reflector_test.py  repeat.py  weather_wind_spread.py  works.py
rust/: Cargo.toml
rust/src/: main.rs
src/: main.rs
src/c/: add.rs  ctime.rs  dht11.rs  mod.rs  py.rs  wind_speed.rs
src/io/: csv.rs  csvmanager.rs  data.rs  mod.rs
