[package]
name = "weather-station"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.44"
# dht-mmap-rust = "0.1.0"
# gpio = "0.4.1"
# wiringpi = "0.2.4"

[build-dependencies]
cc = { version = "1.0", optional = false }
# cc = { version = "1.0", optional = true }

[features]
# Disables c compilation entirely
# rust_only = ["cc"]
rust_only = ["no_pi"]
# Keeps c code like for time but removes raspberry pi dependent code
no_pi = []
# All code is compiled
full = []
# All code is compiled by default
default = ["full"]
